stop boxes cropping small

--- a/style.css
+++ b/style.css
@@ -810,7 +810,7 @@ body {
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1421px) {
   .lg\:h-10 {
     height: 2.5rem;
   }
